# archgw

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  archgw.code-workspace  build_filter_image.sh  index.html  package-lock.json  package.json  search.html  searchindex.js  turbo.json
_static/: documentation_options.js
arch/: Dockerfile  arch_config_schema.yaml  docker-compose.dev.yaml  envoy.template.yaml  supervisord.conf  validate_arch_config.sh  validate_plano_config.sh
arch/tools/: README.md  pyproject.toml
arch/tools/cli/: config_generator.py  consts.py  core.py  docker_cli.py  main.py  utils.py
arch/tools/test/: test_config_generator.py
build_with_arch/: agent.html  multi_turn.html  rag.html
cli/: .gitignore  README.md  build_cli.sh  hatch_build.py  pyproject.toml
cli/planoai/: __init__.py  config_generator.py  consts.py  core.py  defaults.py  docker_cli.py  init_cmd.py  main.py  native_binaries.py  native_runner.py  obs_cmd.py  rich_click_config.py  targets.py  template_sync.py  trace_cmd.py  trace_listener_runtime.py  utils.py  versioning.py
cli/planoai/obs/: __init__.py  collector.py  pricing.py  render.py
cli/planoai/templates/: coding_agent_routing.yaml  conversational_state_v1_responses.yaml  template_sync_map.yaml
cli/test/: test_config_generator.py  test_defaults.py  test_init.py  test_obs_collector.py  test_obs_pricing.py  test_obs_render.py  test_trace_cmd.py  test_version_check.py
cli/test/source/: failure.json  success.json
concepts/: llm_provider.html  prompt_target.html
config/: README.md  arch_config_schema.yaml  docker-compose.dev.yaml  envoy.template.yaml  plano_config_schema.yaml  (+3 more)
crates/brightstaff/: Cargo.toml
crates/brightstaff/src/: app_state.rs  lib.rs  main.rs  streaming.rs
crates/brightstaff/src/handlers/: agent_chat_completions.rs  agent_selector.rs  chat_completions.rs  function_calling.rs  integration_tests.rs  jsonrpc.rs  llm.rs  mod.rs  models.rs  pipeline_processor.rs  response.rs  response_handler.rs  router.rs  router_chat.rs  routing_service.rs  streaming.rs  utils.rs
crates/brightstaff/src/handlers/agents/: errors.rs  mod.rs  orchestrator.rs  pipeline.rs  selector.rs
crates/brightstaff/src/handlers/llm/: mod.rs  model_selection.rs
crates/brightstaff/src/router/: http.rs  llm.rs  llm_router.rs  mod.rs  model_metrics.rs  orchestrator.rs  orchestrator_model.rs  orchestrator_model_v1.rs  plano_orchestrator.rs  router_model.rs  router_model_v1.rs
crates/brightstaff/src/session_cache/: memory.rs  mod.rs  redis.rs
crates/brightstaff/src/signals/: analyzer.rs  mod.rs
crates/brightstaff/src/state/: memory.rs  mod.rs  postgresql.rs  response_state_processor.rs
crates/brightstaff/src/tracing/: constants.rs  custom_attributes.rs  init.rs  mod.rs  service_name_exporter.rs
crates/brightstaff/src/utils/: tracing.rs
crates/hermesllm/: Cargo.toml  README.md
crates/hermesllm/src/: lib.rs
crates/hermesllm/src/apis/: amazon_bedrock.rs  amazon_bedrock_binary_frame.rs  anthropic.rs  mod.rs  openai.rs  openai_responses.rs  sse.rs
crates/hermesllm/src/apis/streaming_shapes/: amazon_bedrock_binary_frame.rs  anthropic_streaming_buffer.rs  chat_completions_streaming_buffer.rs  mod.rs  passthrough_streaming_buffer.rs  responses_api_streaming_buffer.rs  sse.rs  sse_chunk_processor.rs
crates/hermesllm/src/clients/: endpoints.rs  mod.rs  transformer.rs
crates/hermesllm/src/providers/: adapters.rs  id.rs  mod.rs  request.rs  response.rs  streaming_response.rs
crates/hermesllm/src/transforms/: lib.rs  mod.rs
crates/hermesllm/src/transforms/request/: from_anthropic.rs  from_openai.rs  mod.rs
crates/hermesllm/src/transforms/response/: mod.rs  output_to_input.rs  to_anthropic.rs  to_openai.rs
crates/hermesllm/src/transforms/response_streaming/: mod.rs  to_anthropic_streaming.rs  to_openai_streaming.rs
demos/agent_orchestration/multi_agent_crewai_langchain/: Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  run_demo.sh  start_agents.sh
demos/agent_orchestration/multi_agent_crewai_langchain/crewai/: flight_agent.py
demos/agent_orchestration/multi_agent_crewai_langchain/langchain/: weather_agent.py
demos/agent_orchestration/travel_agents/: README.md  config.yaml  config_local_orchestrator.yaml  docker-compose.yaml  pyproject.toml  run_demo.sh  start_agents.sh  test.rest  travel_agent_request.rest
demos/agent_orchestration/travel_agents/src/travel_agents/: flight_agent.py
demos/filter_chains/pii_anonymizer/: README.md  config.yaml  docker-compose.yaml  pii.py  pii_anonymizer.py  pyproject.toml  run_demo.sh  start_agents.sh  store.py  test.sh
demos/getting_started/weather_forecast/: Dockerfile  README.md  config.yaml  docker-compose.yaml  main.py  pyproject.toml  run_demo.sh  start_agents.sh
demos/shared/test_runner/: README.md  common.py  pyproject.toml  run_demo_tests.sh  test_demos.py
demos/use_cases/http_filter/: Dockerfile  docker-compose.yaml  http.rest  pyproject.toml  sample_queries.md
demos/use_cases/http_filter/src/rag_agent/: context_builder.py  input_guards.py  query_rewriter.py  rag_agent.py
demos/use_cases/model_choice_with_test_harness/: README.md  bench.py  plano_config_with_aliases.yaml  pyproject.toml  run_demo.sh
demos/use_cases/travel_agents/: Dockerfile  README.md  arch_config.yaml  config.yaml  docker-compose.yaml  pyproject.toml  start_agents.sh  test.rest
demos/use_cases/travel_agents/src/travel_agents/: __init__.py  currency_agent.py  flight_agent.py  weather_agent.py
model_server/: pyproject.toml
tests/archgw/: common.py  config.yaml  docker-compose.yaml  pyproject.toml  test_prompt_gateway.py
tests/e2e/: README.md  common.py  config_native_smoke.yaml  docker-compose.yaml  pyproject.toml  response.hex  response_with_tools.hex  run_e2e_tests.sh  run_model_alias_tests.sh  run_prompt_gateway_tests.sh  run_responses_state_tests.sh  test_model_alias_routing.py  test_openai_responses_api_client.py  test_openai_responses_api_client_with_state.py  test_prompt_gateway.py
(+402 files in other folders)
