[project]
name = "planoai"
version = "0.4.4"
description = "Python-based CLI tool to manage Plano."
authors = [{name = "Katanemo Labs, Inc."}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7,<9.0.0",
    "grpcio>=1.60.0",
    "jinja2>=3.1.4,<4.0.0",
    "jsonschema>=4.23.0,<5.0.0",
    "opentelemetry-proto>=1.20.0",
    "questionary>=2.1.1,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "rich>=14.2.0",
    "rich-click>=1.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
]

[project.scripts]
planoai = "planoai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "planoai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["planoai"]
include = ["planoai/templates/*.yaml"]

[tool.hatch.build.targets.sdist]
include = ["planoai/templates/*.yaml"]

[tool.pytest.ini_options]
addopts = ["-v"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
