[project]
name = "archgw_modelserver"
version = "0.3.18"
description = "A model server for serving models"
authors = [{name = "Katanemo Labs, Inc", email = "info@katanemo.com"}]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "torch>=2.6.0",
    "uvicorn==0.31.0",
    "transformers>=4.37.0,<5.0.0",
    "accelerate>=1.0.0,<2.0.0",
    "pydantic>=2.10.1,<3.0.0",
    "dateparser",
    "openai>=1.50.2,<2.0.0",
    "httpx==0.27.2", # https://community.openai.com/t/typeerror-asyncclient-init-got-an-unexpected-keyword-argument-proxies/1040287
    "opentelemetry-api>=1.28.0,<2.0.0",
    "opentelemetry-sdk>=1.28.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.28.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0",
    "overrides>=7.7.0,<8.0.0",
]

[project.scripts]
archgw_modelserver = "src.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpserver>=1.1.0,<2.0.0",
    "pytest-retry>=1.6.3,<2.0.0",
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test*.py"]
addopts = ["-v", "-s"]
retries = 2
retry_delay = 0.5
cumulative_timing = false
