[project]
name = "archgw"
version = "0.3.16"
description = "Python-based CLI tool to manage Arch Gateway."
authors = [{ name = "Katanemo Labs, Inc." }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "archgw-modelserver>=0.3.16,<1.0.0",
    "click>=8.1.7,<9.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "jsonschema>=4.23.0,<5.0.0",
    "setuptools==75.5.0",
    "pyyaml>=6.0.2,<7.0.0",
]

[project.scripts]
archgw = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0.0",
]

[tool.poetry]
packages = [{ include = "cli" }]
dependencies = { python = "^3.10" }

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = ["-v"]
