[project]
name = "multi-framework-agents"
version = "0.1.0"
description = "Multi-Framework Travel Agents - CrewAI and LangChain integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "opentelemetry-api>=1.20.0",
    "crewai[tools]>=0.70.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crewai", "langchain"]
