[project]
name = "model-choice-newsletter-code-snippets"
version = "0.1.0"
description = "Benchmarking model alias routing with Plano."
authors = [{name = "Your Name", email = "your@email.com"}]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13.3"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "planoai>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
